Main code fixes, added paging and transfer response